--- a/auction-portal/package.json
+++ b/auction-portal/package.json
@@ -32,6 +32,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
+		"@fortawesome/svelte-fontawesome": "^0.2.2",
 		"bootstrap": "^5.3.3"
 	}
 }
